--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="myElement"></div>
         <script type="text/javascript">
             jwplayer("myElement").setup({
-                image: "https://content.jwplatform.com/thumbs/xJ7Wcodt-720.jpg",
+                image: "https://m.ykimg.com/05350000649264B71427220BB938EDB4",
                 aspectratio: "16:9",
                 width: '100%',
                 aspectratio: '16:9',
@@ -55,9 +55,8 @@
 
             console.log(`
 ==================================================
-- Copyright by WWW.ONEKH.ME
-- Owner by: @2022
-- វីដេទាំងអស់មិនមែនជាកម្មសិទ្ធរបស់ ONEKH.ME នោះទេ។
+- Copyright by WWW.DRAMASABAY.COM
+- Owner by: @2021
 ==================================================
             `)
         </script>
