--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 width: '100%',
                 aspectratio: '16:9',
                 autostart: false,
-                file: 'https://raw.githubusercontent.com/khmer-embed/hidden-love-1/master/Hidden-Love-1.m3u8',
+                file: 'https://bigf.bigo.sg/na_live/V2a2/2ZjIr5.mp4',
                 abouttext: 'FILMKACA',
                 aboutlink: 'http://filmkaca.xyz',
                 captions: {
