--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 aspectratio: '16:9',
                 autostart: false,
                 file: 'https://bigf.bigo.sg/na_live/V2a2/2ZjIr5.mp4',
-                abouttext: 'FILMKACA',
-                aboutlink: 'http://filmkaca.xyz',
+                abouttext: 'DRAMASABAY',
+                aboutlink: 'https://dramasabay.com',
                 captions: {
                     color: '#ffb800',
                     fontSize: 30,
@@ -55,6 +55,7 @@
 ==================================================
 - Copyright by WWW.DRAMASABAY.COM
 - Owner by: @2021
+- Hosting by: DRAMASABAY.COM
 ==================================================
             `)
         </script>
