--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         src: 'http://www.jwplayer.com/?',
                         label: 'jwplayer'
                     }],
-                    code: encodeURI("<iframe src='<?php echo $sharing;?>' width='480' height='320'></iframe>"),
+                    code: encodeURI("<iframe src='<?php echo $sharing;?>' width='auto' height='560'></iframe>"),
                     link: "<?php echo $sharing;?>"
                 }
             })
